# eques-elf-python

./: .gitignore  LICENSE  Pipfile  README.md  equeslocal.go  notes.md  pyproject.toml  release.sh  requirements.txt  setup.cfg
src/: main.py
src/eques_elf/: device.py  eques_local.py
tests/: test_eques_local.py
