[metadata]
name = eques_elf
version = 0.0.2
author = Joey Pereira
author_email = joey@pereira.io
description = Eques Elf support for Python
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/lgo/eques_elf
project_urls =
    Bug Tracker = https://github.com/lgo/eques_elf/issues
keywords = eques elf, smart plug, iot, home assistant, hass
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = ">=3.8"

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[flake8]
ignore = E501